# declarativity

./: boom-msr.bib  declarativity.bib  endmatter.tex  paths.rb
branches/Release0_1/eventLoop/: Makefile.am  loop.C  loop.h  p2Time.C  p2Time.h
branches/Release0_1/net/: Makefile.am  bw.C  bw.h  cc.C  cc.h  ccr.C  ccr.h  cct.C  cct.h  cctx.C  cctx.h  defrag.C  defrag.h  frag.C  frag.h  plsensor.C  plsensor.h  rccr.C  rccr.h  rcct.C  rcct.h  rdelivery.C  rdelivery.h  skr.C  skr.h  snetsim.C  snetsim.h  tman.C  tman.h  tupleseq.C  tupleseq.h  udp.C  udp.h  udpsuio.C  udpsuio.h
branches/Release0_1/tests/: IDs.C  Makefile.am  agg.C  basicelements.C  benchmark.C  chord.C  chordDatalog.C  csv.C  demultiplex.C  join.C  logger.C  lookupGenerator.C  net.C  netcc.C  netcc2.C  netrcc.C  overlog.C  paths.C  pel.C  perfectChord.C  pingpong.C  random.h  reachDatalog.C  reachability.C  ring.C  runChord.C  runManyChords.C  runOverLog.C  runSymphonicChord.C  runSymphony.C  scheduling.C  simple_lookup.C  symphony.C  tables.C  testPlanner.C  testQueue.C  testerr.h  tuples.C  udpListen.C  udpMessage.C  (+1 more)
branches/Release0_1/unitTests/: Makefile.am  p2Test.C  testBasicElementPlumbing.C  testFdbufs.C  testIDs.C  testMarshal.C  testPel.C  testTables.C  testValues.C
branches/distInf/: CMakeLists.txt
branches/distInf/debugger/: CMakeLists.txt
branches/move2cmake/: CMakeLists.txt  configure.ac
branches/win32/: CMakeLists.txt  Makefile.am  README.Windows.txt  config.h.cmake  configure.ac
branches/win32/net/: bw.C  (+23 more)
trunk/: .cvsignore  CHANGELOG.txt  CMakeLists.txt  COMMIT_PROCESS.txt  LICENSE  Makefile.am  Makefile.in  README  README.OSX  README.cmake  TODO.txt  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  grouchy-build.sh  p2.spec  setup
trunk/aggregates/: aggFuncLoader.C  aggSchema.h
trunk/autoBuild/: autoBuild.py
trunk/cmake/: FindRPMBuild.cmake
trunk/dart/: P2-CHORD.xml  topologies.xml
trunk/debugger/: CMakeLists.txt  Makefile.am  README  execRecord.C  execRecord.h  ruleTracer.C  ruleTracer.h  tableTracer.C  tableTracer.h  tap.C  tap.h  traceTuple.C  traceTuple.h
trunk/doc/: Makefile.am  README.P2ServiceInterface.txt  accordion.plg  chord.generator.py  chord.olg  chord.plg  chord.txt  chord1.plg  chord2.plg  chord_overlog.txt  chord_short.olg  debugging-rules.olg  gossip.olg  misc_overlog.plg  narada.olg  narada.plg  narada.txt  others.txt  overlogTests.olg  overlog_primer.tex  ping.olg  pingpong.olg  random.olg  reachable.olg  reachable.plg  ring1.olg  simpleChord.plg  symphony.olg  symphony.plg  testPing.olg  testPong.olg  types.txt
trunk/elements/: .cvsignore  CMakeLists.txt  Makefile.am  agg.C  agg.h  aggregate.C  aggregate.h  aggwrap.C  aggwrap.h  aggwrap2.h  compileStage.C  compileStage.h  csvparser.C  csvparser.h  dDuplicateConservative.h  dRoundRobin.C  dRoundRobin.h  dataflowInstaller.C  dataflowInstaller.h  ddemux.C  ddemux.h  delete.C  delete.h  demux.C  demux.h  discard.C  discard.h  dupElim.C  dupElim.h  duplicate.C  duplicate.h  duplicateConservative.C  duplicateConservative.h  elementRegistry.C  filter.C  filter.h  functorSource.C  functorSource.h  groupby.C  groupby.h  (+93 more)
trunk/eventLoop/: Makefile.am  loop.C  loop.h  p2Time.C  p2Time.h
trunk/lang/: CMakeLists.txt  compileContext.C  langLoader.C
trunk/mapreduce/: mapBase.C  mapBase.h  mergeSort.C  mergeSort.h  reduceBase.C  reduceBase.h
trunk/net/: Makefile.am  basicAck.C  basicAck.h  bw.C  bw.h  cc.C  cc.h  ccr.C  ccr.h  cct.C  cct.h  cctx.C  cctx.h  cumulativeAck.C  defrag.C  defrag.h  dupRemove.C  dupRemove.h  frag.C  frag.h  netglobals.h  odelivery.C  odelivery.h  plsensor.C  plsensor.h  rccr.C  rccr.h  rcct.C  rcct.h  rdelivery.C  rdelivery.h  roundTripTimer.C  roundTripTimer.h  skr.C  skr.h  snetsim.C  snetsim.h  tgen.C  tgen.h  tman.C  (+8 more)
trunk/overlog/: CMakeLists.txt  Makefile.am  ol_context.C  ol_context.h  ol_lexer.C.works  ol_lexer.h  ol_lexer.l  ol_lexer.lex  ol_parser.C.works  ol_parser.tab.h.works  ol_parser.y  overlogCompiler.C  overlogCompiler.h  parser_stuff.h  parser_util.C  parser_util.h  plmb_confgen.C  plmb_confgen.h  routerConfigGenerator.C  routerConfigGenerator.h  rtr_confgen.C  rtr_confgen.h
trunk/p2core/: .cvsignore  CMakeLists.txt  ID.C  ID.h  IdTable.C  IdTable.h  Makefile.am  aggCount.h  aggFactory.C  aggFactory.h  aggMax.C  aggMax.h  aggMin.h  aggregateObj.h  atomic.h  click_string.C  click_string.h  commitManager.h  commonTable.C  commonTable.h  compileUtil.C  dot.C  dot.h  element.C  element.h  elementSpec.C  elementSpec.h  elemental.C  elemental.h  fdbuf.C  fdbuf.h  hooker.C  hooker.h  idTable.C  idTable.h  iteratorObj.h  list.C  list.h  loggerI.C  loggerI.h  (+77 more)
trunk/p2cpp/: Makefile.am  README  p2.C  p2.h
trunk/p2viz/: README  sites.out  sites.py
trunk/phid/: Makefile.am  Makefile.in  phid.C
trunk/planner/: Makefile.am  catalog.C  catalog.h  dataflow.C  eca_context.C  eca_context.h  localize_context.C  localize_context.h  netPlanner.C  netPlanner.h  planContext.C  planContext.h  planner.C  planner.h  rulePel.C  rulePlanner.C  ruleStrand.C  ruleStrand.h  stageStrand.h  tableStore.C  tableStore.h
trunk/python/: Makefile.am
trunk/pythonElements/: Makefile.am
trunk/stages/: CSVstage.C  CSVstage.h  Makefile.am  stageLoader.C  tokenizer.C
trunk/tests/: CMakeLists.txt  IDs.C  Makefile.am  agg.C  basicElementPlumbing.C  basicelements.C  benchmark.C  chord.C  chordDatalog.C  csv.C  demultiplex.C  join.C  logger.C  lookupGenerator.C  net.C  netcc.C  netcc2.C  netrcc.C  ol_tests.py  overlog.C  paths.C  pel.C  perfectChord.C  pingpong.C  process_output  random.h  reachDatalog.C  reachability.C  ring.C  runChord.C  runManyChords.C  runOverLog.C  runOverLog2.C  runPingPong.C  runStagedOverlog.C  runSymphonicChord.C  runSymphony.C  run_node  scheduling.C  setup_node  (+14 more)
trunk/unitTests/: Makefile.am  p2Test.C  p2TestTable2.C  testBasicElementPlumbing.C  testCsv.C  testFdbufs.C  testIDs.C  testLists.C  testMarshal.C  testPel.C  testRefTable.C  testTable2.C  testTable2.h  testTables.C  testTables.h  testValues.C  testValues.h
trunk/util/: fixflex.sh
(+9072 files in other folders)
