dnl
dnl Copyright goes here.
dnl
AC_INIT(config.h.in)

dnl
dnl Sets PACKAGE and VERSION defines
dnl
AM_INIT_AUTOMAKE(phi,0.1.0)

dnl
dnl Creates config.h file with #defines instead of passing to compiler.
dnl
AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

dnl
dnl Checks for programs.
dnl
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
SFS_WFLAGS
AC_PROG_INSTALL
AC_PROG_LN_S

dnl
dnl Miscellaneous
dnl
AM_DISABLE_SHARED
AM_PROG_LIBTOOL

SFS_SFS
SFS_CFLAGS
ETAGS_ARGS='-C /dev/null'
AC_SUBST(ETAGS_ARGS)


CPPFLAGS="$CPPFLAGS -I"'$(top_srcdir)'
for lib in p2core; do
    CPPFLAGS="$CPPFLAGS -I"'$(top_srcdir)'"/$lib"
done
CPPFLAGS="$CPPFLAGS -I"'$(top_builddir)'"/svc"
CPPFLAGS="$CPPFLAGS -I"'$(top_srcdir)'"/svc"
AC_SUBST(LIBP2CORE)
LIBP2CORE='$(top_builddir)/p2core/libp2core.la'
if test "$enable_shared" = yes; then
    LDEPS=
else
    LDEPS='$(LIBP2CORE)'
fi

AC_OUTPUT(Makefile 
	  p2core/Makefile
	  tests/Makefile
          phid/Makefile
         )
